# messy-doc-extraction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.rpiv/artifacts/discover/: 2026-06-25_19-47-04_dirty-data-extraction-finetune.md
.rpiv/artifacts/handoffs/: 2026-06-26_17-45-48_fix-ruff-and-verification-next-steps.md
.rpiv/artifacts/plans/: 2026-06-25_21-35-07_dirty-data-extraction-finetune.md
.rpiv/artifacts/research/: 2026-06-25_20-26-01_dirty-data-extraction-finetune.md
.rpiv/artifacts/validation/: 2026-06-26_15-31-17_dirty-to-clean-synthetic-data-fine-tuning-pipeline.md  2026-06-26_20-21-50_dirty-to-clean-synthetic-data-fine-tuning-pipeline.md
docs/: REFLECTION.md
src/doc_extract/: __init__.py  active.py  canon.py  cli.py  config.py  corrupt.py  doctor.py  evaluate.py  generate.py  jsonl.py  prepare.py  prompting.py  run_all.py  schema.py  teacher_labeler.py  train.py  validation.py
tests/: test_active.py  test_cli_make.py  test_config.py  test_corrupt_invariant.py  test_doctor.py  test_evaluate.py  test_generate_totals.py  test_jsonl_helpers.py  test_prepare_split.py  test_prompt_template.py  test_teacher_labeler.py  test_validation.py
