[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extract"
version = "0.1.0"
description = "Dirty-to-clean synthetic-data SFT/QLoRA extraction pipeline (learning project)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Burke T" }]
dependencies = [
    "transformers>=5,<6",
    "trl>=1,<2",
    "peft>=0.13,<1",
    "accelerate>=1.1,<2",
    "bitsandbytes>=0.44,<1",
    "datasets>=5,<6",
    "torch>=2.3,<3",
    "pydantic>=2.7,<3",
    "openai>=2,<3",
    "tenacity>=8.5,<10",
    "jsonschema>=4.23,<5",
    "scipy>=1.13,<2",
    "faker>=29,<41",
]

[project.scripts]
doc-extract = "doc_extract.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: slow checks that are skipped by the default make test target",
    "network: checks that require live network/API access",
    "gpu: checks that require CUDA/GPU access",
    "model: checks that load or run ML models",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
